completed the logic behind typing the correct words
added actual English words and the text will move if you write the correct letter

--- a/index.css
+++ b/index.css
@@ -113,15 +113,18 @@ body {
 .words-container{
     position: relative;
     background-color: #042238;
-    letter-spacing: 3px;
+    letter-spacing: 0.3vh;
     margin-top: 20vh;
     font-size: 5vh;
     height: 40vh;
+    margin-bottom: 0;
 }
 
 .words{
+    white-space: pre;
     position: relative;
     top: 10vh;
+    font-size: 6vh;
     background-color: #042238;
 }
 
